<resources>

    <string name="app_name">Stockerr</string>
    <string name="title_activity_slide_menu">M</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Acerca de</string>
    <string name="menu_gallery">Cambiar Contraseña</string>
    <string name="menu_slideshow">Identificación QR</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Cerrar Sesión</string>
    <string name="menu_send">Menú Principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
