<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_mp">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.login.ui.edit_profile.Edit_profileFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/acerca_de" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.login.ui.set_passwd.Set_passwdFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.login.ui.code_qr.Code_qrFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.login.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.login.ui.close.ShareFragment"
        android:label="@string/menu_share" >
        <action
            android:id="@+id/action_nav_share_to_nav_mp"
            app:destination="@id/nav_mp" />
    </fragment>

    <fragment
        android:id="@+id/nav_mp"
        android:name="com.example.login.ui.home_mp.Home_mpFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_homemp" />
</navigation>