<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_mp"
            android:icon="@drawable/home"
            android:title="Menu Principal"
            ></item>

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/llave"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/codigo"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/llave"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/info"
                android:title="@string/menu_home" />

        </menu>
    </item>

</menu>
